@@ -58,6 +58,7 @@ next version - not released yet
   Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
   Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Turkish, Ukrainian
   and Vietnamese translations
+! Work-around corrupted display with NVIDIA drivers v344.11 when using EVR, EVR-CP or Sync renderers 
 ! "Load subtitle" dialog: Fix the file filters on Windows Vista+
 ! "Resources" tab: The resource saved wasn't always matching the selection
 ! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled
